--- a/practice/index.html
+++ b/practice/index.html
@@ -31,19 +31,55 @@
 
   </section><!--/top -->
 
-  <section class="about">
-
+  <section class="about section">
+    <div class="container">
+      <h2 class="section-title">デイトラとは</h2>
+      <div class="about-left"></div>
+      <img src="./img/about.png" alt="デイトラとは">
+      <div class="about-right"></div>
+      <p>デイトラとは、無料で・迷わず・楽しく学べるプログラミング学習アプリです。 毎日設定された課題をこなしていくだけで、未経験から30日でプログラミングスキルが身につきます。1日1題30日でプロのWebエンジニアを目指しましょう!</p>
+    </div>
   </section><!-- /about -->
 
-  <section class="course">
+  <section class="course section">
+    <div class="container ">
+      <h2 class="section-title">コース一覧</h2>
+      <div class="course-wrapper">
+          <div class="course-item">
+            <img src="./img/web_first.png" alt="デイトラ初級編">
+            <p>HTML / CSS / Bootstrap</p>
+          </div>
+          <div class="course-item">
+            <img src="./img/web_second.png" alt="デイトラ中級編">
+            <p>TML / CSS / JavaScript / jQuery</p>
+          </div>
+          <div class="course-item">
+            <img src="./img/web_third.png" alt="デイトラ上級編">
+            <p>PHP / WordPress</p>
+          </div>
+      </div>
+
+    </div>
 
   </section><!-- /course -->
 
-  <section class="contact">
+  <section class="contact section">
+    <div class="container">
+      <h2 class="section-title">お問い合わせ</h2>
+      <p class="contact-message">さあ今日から30日間を始めよう!</p>
+      <form action="#" method="post">
+        <input type="email" name="email" id="email" placeholder="メールアドレス">
+        <button type="submit" class="btn btn-register">無料ではじめる</button>
+
+      </form>
+    </div>
 
   </section><!-- /contact -->
 
   <footer>
+    <div class="container clear" >
+      <p  class="copyright">Copyright(C) 2020 東京フリーランス ALL Rights Reserved.</p>
+    </div>
 
   </footer>
   
