--- a/practice/index.html
+++ b/practice/index.html
@@ -27,17 +27,26 @@
   </header>
 
   <section class="top">
-    <img src="./img/main-vsual.png" alt="">
+    <!-- <img src="./img/main-vsual.png" alt=""> -->
+    <div class="container">
+      <p class="top-title">1日1題30日で<br>
+        プロのWebエンジニアになろう！</p>
+      <p class="top-subtitle">毎日設定された課題をこなすだけ！<br>
+        未経験から30日でプログラミングスキルをつけよう</p>
+    </div>
+
 
   </section><!--/top -->
 
   <section class="about section">
-    <div class="container">
+    <div class="container clear">
       <h2 class="section-title">デイトラとは</h2>
-      <div class="about-left"></div>
-      <img src="./img/about.png" alt="デイトラとは">
-      <div class="about-right"></div>
-      <p>デイトラとは、無料で・迷わず・楽しく学べるプログラミング学習アプリです。 毎日設定された課題をこなしていくだけで、未経験から30日でプログラミングスキルが身につきます。1日1題30日でプロのWebエンジニアを目指しましょう!</p>
+      <div class="about-left">
+        <img src="./img/about.png" alt="デイトラとは">
+      </div>
+      <div class="about-right">
+        <p>デイトラとは、無料で・迷わず・楽しく学べるプログラミング学習アプリです。 毎日設定された課題をこなしていくだけで、未経験から30日でプログラミングスキルが身につきます。1日1題30日でプロのWebエンジニアを目指しましょう!</p>
+      </div>
     </div>
   </section><!-- /about -->
 
